<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/ic_menu_dashboard"
                android:title="@string/menu_title_dashboard"/>
        <item
                android:id="@+id/nav_attendance"
                android:icon="@drawable/ic_menu_attendance"
                android:title="@string/menu_title_attendance"/>
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/menu_title_profile"/>
        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_title_setting"/>


    </group>

    <item android:title="@string/menu_title_detection">
        <menu>
            <item
                    android:id="@+id/nav_geolocation"
                    android:icon="@drawable/ic_menu_geolocation"
                    android:title="@string/menu_title_geolocation"/>
            <item
                    android:id="@+id/nav_wifi"
                    android:icon="@drawable/ic_menu_wifi"
                    android:title="@string/menu_title_wifi"/>

            <item
                    android:id="@+id/nav_bluetooth"
                    android:icon="@drawable/ic_menu_bluetooth"
                    android:title="@string/menu_title_bluetooth"/>

        </menu>
    </item>

</menu>
