<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".presentation.ui.activities.registration.RegistrationActivity">


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
                  android:gravity="center_horizontal">

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:layout_marginTop="@dimen/activity_vertical_margin">
            <EditText android:id="@+id/edittext_company_name" android:maxLength="@string/activity_registration_max_company_length"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/activity_registration_hint_company_name">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"
                      android:layout_marginTop="@dimen/activity_vertical_margin">
            <com.hbb20.CountryCodePicker
                    android:id="@+id/input_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
                <EditText android:id="@+id/edittext_mobile_number" android:maxLength="@string/activity_registration_max_mobile_length"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/activity_registration_hint_mobile_number" android:inputType="number">
                </EditText>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"
                      android:layout_marginTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin"
                      android:weightSum="3">

            <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/activity_registration_agree_to" android:layout_weight="2"/>


            <TextView android:id="@+id/text_term_condition" android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:textColor="@color/colorPrimary"
                      android:text="@string/activity_registration_term_condition" android:layout_weight="1"/>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton android:id="@+id/button_next" android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:text="@string/button_text_next" android:theme="@style/myColoredButton"/>


        <TextView android:layout_width="match_parent" android:gravity="center" android:layout_height="match_parent"
                  android:text="@string/activity_registration_or" android:textStyle="bold" android:textSize="20dp"
                  android:textColor="@color/colorGreyShade"/>

        <android.support.v7.widget.AppCompatButton android:id="@+id/button_register_company" android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:text="@string/button_text_register_company"
                                                   android:theme="@style/myColoredButton"/>

        <TextView android:layout_width="match_parent" android:gravity="center" android:layout_height="match_parent"
                  android:text="@string/activity_registration_you_can_register" android:textStyle="italic" android:textSize="15dp"
                  android:textColor="@color/colorGreyShade" android:layout_gravity="center"/>

        <TextView android:id="@+id/text_ams_site" android:layout_width="match_parent" android:gravity="center"
                  android:layout_height="match_parent"
                  android:text="@string/activity_registration_ams_site" android:textStyle="italic" android:textSize="15dp"
                  android:textColor="@color/colorPrimary" android:layout_gravity="center"/>


    </LinearLayout>


</RelativeLayout>
